# seaglass-app

./: .gitattributes  .gitmodules  .travis.yml  AUTHORS  README  build.sh  init-ndk.sh
android/app/: CMakeLists.txt  build.gradle
android/app/src/androidTest/java/edu/uw/cs/seaglass/app/ui/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: about.html
android/app/src/main/assets/arm-linux-androideabi/: cell_log
android/app/src/main/cpp/: com_google_ase_Exec.cpp  com_google_ase_Exec.h
android/app/src/main/java/com/google/ase/: Exec.java
android/app/src/main/java/edu/uw/cs/seaglass/app/: ExecutableHost.java  Options.java  Utils.java
android/app/src/main/java/edu/uw/cs/seaglass/app/db/: AppDatabase.java  Band.java  CellObservation.java  CellObservationDAO.java  ClearSyncWorker.java  Converters.java  DatabaseService.java  GSMPacket.java  GSMPacketDAO.java  LocationMeasurement.java  LocationMeasurementDAO.java  MeasurementHeader.java  SpectrumMeasurement.java  SpectrumMeasurementDAO.java  SyncUploadWorker.java
android/app/src/main/java/edu/uw/cs/seaglass/app/driver/: CP210xSerialPort.java  USBDeviceIDs.java  USBSerialPort.java  USBSerialPortManager.java
android/app/src/main/res/layout/: activity_about.xml  activity_intro.xml  activity_location.xml  activity_main.xml  fragment_cell_info.xml  fragment_config.xml  fragment_intro.xml  fragment_status.xml
android/app/src/main/res/menu/: main_toolbar_menu.xml  menu_intro.xml  navigation.xml
android/app/src/main/res/values/: colors.xml  google_maps_api.xml  ic_launcher_background.xml  strings.xml
android/app/src/main/res/xml/: device_filter.xml  file_paths.xml
(+28 files in other folders)
